--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div class="main">
-		<div class="heading"><h3>This is a Heading</h3></div>
+		<div id="heading"><h3>This is a Heading</h3></div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
